add confluent-3.3.0-2.11